--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,9 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+- task: Npm@1
+  inputs:
+    command: 'install'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
